chore: update CI and biome configurations for enhanced linting
- Modified CI workflow to run Biome checks on source, e2e, and script directories.
- Updated biome.json to include experimental scanner ignores for better performance.
- Adjusted package.json linting and checking scripts to encompass e2e and scripts directories.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,9 +103,9 @@ jobs:
           npm install -g pnpm@9
           pnpm install --frozen-lockfile
 
-      - name: Biome lint
+      - name: Biome check (src + e2e + scripts)
         working-directory: frontend
-        run: npx biome lint . --reporter=github
+        run: npx biome check ./src ./e2e ./scripts --reporter=github
 
       - name: TypeScript type check
         working-directory: frontend
