--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "biome lint ./src",
+    "lint": "biome lint ./src ./e2e ./scripts",
     "format:biome": "biome format ./src --write",
-    "biome:check": "biome check ./src",
-    "biome:fix": "biome check ./src --fix",
+    "biome:check": "biome check ./src ./e2e ./scripts",
+    "biome:fix": "biome check ./src ./e2e ./scripts --fix",
     "type-check": "tsc --noEmit",
     "test": "vitest --test-timeout=6000 --hook-timeout=6000 --teardown-timeout=6000",
     "test:run": "vitest run --test-timeout=6000 --hook-timeout=6000 --teardown-timeout=6000",
