chore: enhance testing setup and configurations for improved stability
- Updated .gitignore to ensure the development guide is included in version control.
- Enhanced Vitest configuration to address ESM/CJS packaging issues by adding a mock for rehype-harden and adjusting server dependencies.
- Improved test stability by avoiding redefining non-configurable properties like window.location, and added Web Streams polyfills for compatibility.
- Refactored test files to utilize hoisted mock components for better organization and performance.
- Mocked components in tests to streamline execution and reduce overhead.

--- a/.gitignore
+++ b/.gitignore
@@ -261,6 +261,7 @@ docs/**/*-backup.*
 *.development.*
 *.staging.*
 development-*
+!docs/developers/development-guide.md
 staging-*
 
 # Performance and profiling outputs
