chore: update .gitignore and enhance date formatting in schema adapters
- Added 'docs/prompts/database-provider-research' to .gitignore for better version control.
- Improved date formatting in 'formatTripDate' function to be timezone-agnostic for 'YYYY-MM-DD' inputs, ensuring consistent output across environments.
- Updated related tests to reflect the new deterministic date formatting behavior.

--- a/.gitignore
+++ b/.gitignore
@@ -338,6 +338,7 @@ scan-results/
 # Project specific files
 .agent/
 supabase/.temp/
+docs/prompts/database-provider-research
  
 # Frontend workspace (consolidated from frontend/.gitignore)
 next-env.d.ts
