--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,12 @@
     "biome:check": "biome check ./src ./e2e ./scripts",
     "biome:fix": "biome check ./src ./e2e ./scripts --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest --test-timeout=6000 --hook-timeout=6000 --teardown-timeout=6000",
-    "test:run": "vitest run --test-timeout=6000 --hook-timeout=6000 --teardown-timeout=6000",
+    "test": "vitest",
+    "test:run": "vitest run",
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:ci": "vitest run --coverage",
+    "test:ci": "CI=1 vitest run --coverage --pool=vmForks --max-workers=2 --reporter=default",
     "test:e2e": "playwright test",
     "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
     "codemod:ai-route": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts",
