feat: enhance biome and package configurations for testing
- Added new linter rules to biome.json for test factories and mocks, disabling naming convention enforcement to accommodate diverse test structures.
- Updated package.json to include a new script for running benchmark tests, improving the testing suite's capabilities.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -223,6 +223,26 @@
       }
     },
     {
+      "includes": ["**/test/factories/**"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": "off"
+          }
+        }
+      }
+    },
+    {
+      "includes": ["**/test/mocks/**"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": "off"
+          }
+        }
+      }
+    },
+    {
       "includes": ["**/schemas/env.ts"],
       "linter": {
         "rules": {
@@ -260,7 +280,7 @@
                     "selector": { "kind": "class", "scope": "global" }
                   },
                   {
-                    "formats": ["PascalCase"],
+                    "formats": ["PascalCase", "snake_case"],
                     "selector": { "kind": "interface", "scope": "global" }
                   },
                   {
