--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "test:benchmark": "npx tsx scripts/benchmark-tests.ts",
     "test:ci": "CI=1 vitest run --coverage --pool=vmForks --max-workers=2 --reporter=default",
     "test:e2e": "playwright test",
     "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
