chore: update .gitignore and remove obsolete test-results.json file
- Added test-results.json to .gitignore to prevent tracking of generated test result files.
- Deleted the outdated test-results.json file from the repository to clean up unnecessary artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,7 @@ test_results.log
 full_test_results.log
 backend_test_results_*.md
 analysis_results.md
+test-results.json
 
 # Frontend temporary files
 frontend/lint-*.txt
