--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:benchmark": "npx tsx scripts/benchmark-tests.ts",
-    "test:ci": "CI=1 vitest run --coverage --pool=vmForks --max-workers=2 --reporter=default",
+    "test:quick": "vitest run --project api --project ui --reporter=dot",
+    "test:ci": "CI=1 vitest run --project api --project ui --reporter=dot",
+    "test:coverage:shard": "CI=1 vitest run --coverage --reporter=blob",
+    "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
     "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
     "codemod:ai-route": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts",
