ci(frontend): fix Actions steps\n\n- Remove setup-node cache: pnpm to avoid requiring pnpm before install\n- Keep explicit npm i -g pnpm and install step\n- Gate coverage merge job to run only when sharded coverage succeeds\n\nThis resolves 'Unable to locate executable file: pnpm' and prevents merge job from running on PRs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,8 +96,6 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version-file: '.nvmrc'
-          cache: 'pnpm'
-          cache-dependency-path: 'frontend/pnpm-lock.yaml'
 
       - name: Install deps
         working-directory: frontend
@@ -190,8 +188,6 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version-file: '.nvmrc'
-          cache: 'pnpm'
-          cache-dependency-path: 'frontend/pnpm-lock.yaml'
 
       - name: Install deps
         working-directory: frontend
@@ -240,7 +236,7 @@ jobs:
   frontend-coverage-merge:
     name: Frontend Coverage (merge)
     needs: frontend-coverage
-    if: always()
+    if: ${{ needs.frontend-coverage.result == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
