--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:benchmark": "npx tsx scripts/benchmark-tests.ts",
-    "test:quick": "vitest run --project api --project ui --reporter=dot",
-    "test:ci": "CI=1 vitest run --project api --project ui --reporter=dot",
+    "test:quick": "vitest run --reporter=dot",
+    "test:ci": "CI=1 vitest run --reporter=dot",
     "test:coverage:shard": "CI=1 vitest run --coverage --reporter=blob",
     "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
