--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "codemod:check-idempotency": "pnpm codemod:ai-route:dry && pnpm codemod:ai-messages:dry && pnpm codemod:tests-env:dry && git diff --quiet"
   },
   "dependencies": {
+    "@ai-sdk/mcp": "1.0.0-beta.15",
     "@ai-sdk/anthropic": "3.0.0-beta.53",
     "@ai-sdk/openai": "3.0.0-beta.57",
     "@ai-sdk/react": "3.0.0-beta.98",
