feat: integrate travel planning tools with AI SDK v6
- Added a unified tool registry for travel planning, including functionalities for creating, updating, and saving travel plans.
- Implemented tools for combining search results from flights, accommodations, and activities into unified recommendations.
- Introduced Redis caching for travel plans with configurable TTLs for draft and finalized states.
- Enhanced user memory logging for travel plans, capturing key actions and updates.
- Created unit tests to validate the functionality of new tools and ensure robust error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -340,7 +340,7 @@ scan-results/
 .agent/
 supabase/.temp/
 docs/prompts/database-provider-research
- 
+docs/prompts/tools/
 # Frontend workspace (consolidated from frontend/.gitignore)
 next-env.d.ts
 .vercel/
