feat: introduce batch web search tool with enhanced concurrency and telemetry
- Added `webSearchBatch` tool to execute multiple queries concurrently with bounded parallelism.
- Implemented optional top-level rate limiting and integrated telemetry spans for monitoring.
- Updated web search tool to support custom category strings and improved input validation.
- Simplified `.env.example` to reflect new optional configuration for self-hosted Firecrawl.
- Enhanced unit tests for web search and batch functionalities, ensuring comprehensive coverage.

--- a/.env.example
+++ b/.env.example
@@ -269,6 +269,9 @@ VISUAL_CROSSING_API_KEY=your_visual_crossing_api_key_here
 # Web Crawling
 WEBCRAWL_MCP_ENDPOINT=http://localhost:3001
 FIRECRAWL_API_KEY=your_firecrawl_api_key_here
+# Optional (self-hosters only): override Firecrawl API base URL
+# Default is https://api.firecrawl.dev/v2 and works for most users.
+# FIRECRAWL_BASE_URL=
 
 # Browser Automation
 PLAYWRIGHT_MCP_ENDPOINT=http://localhost:3004
