feat: implement accommodation and flight agent features with routing and UI components
- Introduced accommodation and flight agent route handlers for frontend-only operations, enabling search functionalities with caching and rate limiting.
- Added feature flags for agent waves, allowing dynamic enabling/disabling of features during rollout.
- Developed UI components for displaying flight and accommodation options, enhancing user experience with structured results.
- Established comprehensive Zod schemas for request and response validation, ensuring data integrity across agent workflows.
- Implemented unit tests for new functionalities, covering route handlers and UI components to ensure reliability and performance.

--- a/.env.example
+++ b/.env.example
@@ -314,6 +314,14 @@ NEXT_PUBLIC_APP_NAME=TripSage
 # Node environment
 NODE_ENV=development
 
+# Agent feature flags (frontend-only agents)
+# Enable/disable agent waves during rollout. Values: true/false
+AGENT_WAVE_FLIGHT=false
+AGENT_WAVE_ACCOMMODATION=false
+AGENT_WAVE_BUDGET=false
+AGENT_WAVE_MEMORY=false
+AGENT_WAVE_ROUTER=false
+
 # =============================================================================
 # DEVELOPMENT AND DEBUGGING (DEVELOPMENT ONLY)
 # =============================================================================
