feat: enhance agent functionalities with new tools and integrations
- Added new agent endpoints for budget planning, itinerary generation, and memory updates, streamlining user interactions.
- Integrated GeoSure travel advisory and OpenTripMap POI lookup tools, enhancing safety and destination research capabilities.
- Updated environment variables in `.env.example` for new API keys and configurations.
- Refactored existing agent logic to utilize centralized rate limit configurations, improving performance and maintainability.
- Implemented comprehensive tests for new functionalities, ensuring reliability and performance across agent workflows.

--- a/.env.example
+++ b/.env.example
@@ -87,7 +87,7 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_token_here
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Default OpenAI model
-OPENAI_MODEL=gpt-5
+OPENAI_MODEL=gpt-5-mini
 
 # Default temperature for AI models
 MODEL_TEMPERATURE=0.7
@@ -96,6 +96,13 @@ MODEL_TEMPERATURE=0.7
 # See https://openrouter.ai/docs/app-attribution
 OPENROUTER_REFERER=https://your-site.example.com
 OPENROUTER_TITLE=TripSage
+# Vercel AI Gateway API key (optional, for unified routing and observability)
+# When set, routes all provider requests through Vercel AI Gateway
+AI_GATEWAY_API_KEY=
+
+# Vercel AI Gateway base URL (optional, defaults to https://ai-gateway.vercel.sh/v1)
+AI_GATEWAY_URL=
+
 
 # =============================================================================
 # LANGGRAPH ORCHESTRATION CONFIGURATION
@@ -242,6 +249,9 @@ GOOGLE_MAPS_QUERIES_PER_SECOND=10
 
 # Duffel API token
 DUFFEL_ACCESS_TOKEN=your_duffel_access_token_here
+# Duffel API key (fallback, prefer DUFFEL_ACCESS_TOKEN above)
+DUFFEL_API_KEY=
+
 
 # Google Calendar credentials file path
 GOOGLE_CALENDAR_CREDENTIALS_FILE=credentials.json
@@ -264,6 +274,10 @@ CRAWL4AI_MCP__TIMEOUT=30.0
 
 # Weather APIs
 OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
+# OpenWeather API key (used by frontend weather tool)
+# Note: Code uses OPENWEATHER_API_KEY, backend may use OPENWEATHERMAP_API_KEY
+OPENWEATHER_API_KEY=your_openweather_api_key_here
+
 VISUAL_CROSSING_API_KEY=your_visual_crossing_api_key_here
 
 # Web Crawling
@@ -279,6 +293,20 @@ BROWSER_MCP_ENDPOINT=http://localhost:3002
 
 # Travel APIs
 FLIGHTS_MCP_ENDPOINT=http://localhost:3003
+# OpenTripMap API key (optional, for POI lookups)
+# Get your key at https://opentripmap.io/docs
+OPENTRIPMAP_API_KEY=
+
+# GeoSure/Travel Advisory API key (optional, for safety scores)
+GEOSURE_API_KEY=
+
+# Accommodation search endpoints (optional, for Airbnb MCP or custom accommodation service)
+ACCOM_SEARCH_URL=
+ACCOM_SEARCH_TOKEN=
+# Alternative names (for backward compatibility)
+AIRBNB_MCP_URL=
+AIRBNB_MCP_API_KEY=
+
 
 # Memory and Calendar
 MEMORY_MCP_ENDPOINT=http://localhost:3008
