--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,8 @@
     "codemod:check-idempotency": "pnpm codemod:ai-route:dry && pnpm codemod:ai-messages:dry && pnpm codemod:tests-env:dry && git diff --quiet"
   },
   "dependencies": {
-    "@ai-sdk/mcp": "1.0.0-beta.15",
     "@ai-sdk/anthropic": "3.0.0-beta.53",
+    "@ai-sdk/mcp": "1.0.0-beta.15",
     "@ai-sdk/openai": "3.0.0-beta.57",
     "@ai-sdk/react": "3.0.0-beta.98",
     "@hello-pangea/dnd": "^18.0.1",
@@ -76,6 +76,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.23.24",
+    "html-to-text": "^9.0.5",
+    "i18n-iso-countries": "^7.14.0",
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.553.0",
     "nanoid": "^5.1.6",
@@ -103,6 +105,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
     "@types/node": "24.10.0",
     "@types/react": "^19.2.2",
