chore: update environment variable configuration for Google Maps and Supabase
- Renamed Google Maps API key variables to differentiate between server-side and browser keys, ensuring compliance with API usage policies.
- Added new environment variables for Supabase configuration in the frontend, enhancing integration capabilities.
- Updated example files to reflect the latest configuration requirements for development and testing environments.

--- a/.env.test.example
+++ b/.env.test.example
@@ -235,8 +235,13 @@ OTEL_INSTRUMENTATION=
 # EXTERNAL API CONFIGURATION
 # =============================================================================
 
-# Google Maps Platform API key
-GOOGLE_MAPS_API_KEY=test-google-maps-api-key
+# Google Maps Platform API keys
+# Server-side key (required for server routes like /api/geocode in test env)
+GOOGLE_MAPS_SERVER_API_KEY=test-google-maps-server-api-key
+
+# Browser key (optional; used by client components in tests/mocks)
+NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=test-google-maps-browser-api-key
+
 
 # Google Maps timeout
 GOOGLE_MAPS_TIMEOUT=10.0
