--- a/.env.example
+++ b/.env.example
@@ -235,8 +235,14 @@ OTEL_INSTRUMENTATION=
 # EXTERNAL API CONFIGURATION
 # =============================================================================
 
-# Google Maps Platform API key
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# Google Maps Platform API keys
+# Server-side key (required for server routes like /api/geocode).
+# Must be IP- and API-restricted (Geocoding/Places/Routes/Time Zone) per GMP policy.
+GOOGLE_MAPS_SERVER_API_KEY=your_google_maps_server_api_key_here
+
+# Browser key (optional; used by Map/Places autocomplete client components).
+# Must be HTTP referrer-restricted to Maps JavaScript API only.
+NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=your_google_maps_browser_api_key_here
 
 # Google Maps timeout
 GOOGLE_MAPS_TIMEOUT=10.0
@@ -258,6 +264,17 @@ GOOGLE_CALENDAR_CREDENTIALS_FILE=credentials.json
 
 # Google Calendar token file path
 GOOGLE_CALENDAR_TOKEN_FILE=token.json
+
+# =============================================================================
+# FRONTEND (NEXT.JS) CONFIGURATION
+# =============================================================================
+
+# Supabase (frontend SSR and client)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
+# Optional: base path for Next.js deployment (e.g., "/tripsage")
+NEXT_PUBLIC_BASE_PATH=
 
 # =============================================================================
 # MCP TOOL CONFIGURATION
