--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ coverage.xml
 .pytest_cache/
 .mypy_cache/
 env/
+!frontend/src/lib/env/
 venv/
 .venv/
 ENV/
@@ -56,8 +57,6 @@ local_settings.py
 # Node
 node_modules/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Supabase / PostgreSQL
 .supabase/
@@ -86,15 +85,6 @@ Thumbs.db
 .claude/
 *.local.md
 CLAUDE.local.md
-
-# Taskmaster
-.taskmasterconfig
-tasks/*.json
-!tasks/tasks.json.example
-scripts/prd.txt
-scripts/*.prd
-!scripts/example_prd.txt
-.taskmaster/
 
 # repomix
 repomix-output.*
