--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "@ai-sdk/anthropic": "3.0.0-beta.53",
     "@ai-sdk/mcp": "1.0.0-beta.15",
     "@ai-sdk/openai": "3.0.0-beta.57",
-    "@ai-sdk/react": "3.0.0-beta.98",
+    "@ai-sdk/react": "3.0.0-beta.99",
+    "@ai-sdk/xai": "3.0.0-beta.37",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@openrouter/ai-sdk-provider": "^1.2.2",
@@ -79,17 +80,21 @@
     "framer-motion": "12.23.24",
     "html-to-text": "^9.0.5",
     "i18n-iso-countries": "^7.14.0",
+    "ical-generator": "^10.0.0",
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.553.0",
+    "luxon": "^3.7.2",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "node-ical": "^0.22.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.3.0",
+    "rrule": "^2.8.1",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
@@ -109,6 +114,7 @@
     "@types/google.maps": "^3.58.1",
     "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
+    "@types/luxon": "^3.7.1",
     "@types/node": "24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
