--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,13 +34,13 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.0-beta.53",
+    "@ai-sdk/google": "3.0.0-beta.43",
     "@ai-sdk/mcp": "1.0.0-beta.15",
     "@ai-sdk/openai": "3.0.0-beta.57",
     "@ai-sdk/react": "3.0.0-beta.99",
     "@ai-sdk/xai": "3.0.0-beta.37",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
-    "@openrouter/ai-sdk-provider": "^1.2.2",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
