chore: implement Google Calendar integration and related features
- Added calendar integration with Google Calendar API, including event creation, listing, and deletion functionalities.
- Introduced components for connecting to Google Calendar, managing events, and exporting trip itineraries to ICS format.
- Implemented server-side routes for handling calendar events and free/busy queries, ensuring robust API interactions.
- Added comprehensive tests for calendar functionalities, including event CRUD operations and ICS import/export processes.
- Updated documentation to reflect new calendar service architecture and usage guidelines.

--- a/.env.example
+++ b/.env.example
@@ -92,16 +92,18 @@ OPENAI_MODEL=gpt-5-mini
 # Default temperature for AI models
 MODEL_TEMPERATURE=0.7
 
-# OpenRouter Attribution (server-side only in Next.js)
-# See https://openrouter.ai/docs/app-attribution
-OPENROUTER_REFERER=https://your-site.example.com
-OPENROUTER_TITLE=TripSage
 # Vercel AI Gateway API key (optional, for unified routing and observability)
 # When set, routes all provider requests through Vercel AI Gateway
 AI_GATEWAY_API_KEY=
 
 # Vercel AI Gateway base URL (optional, defaults to https://ai-gateway.vercel.sh/v1)
 AI_GATEWAY_URL=
+
+# OpenRouter API key (server-side fallback, separate from attribution headers)
+OPENROUTER_API_KEY=
+
+# xAI API key (server-side fallback)
+XAI_API_KEY=
 
 
 # =============================================================================
