chore: update .gitignore and improve AGENTS.md documentation
- Added frontend XML files to .gitignore to prevent unnecessary tracking of generated files.
- Updated AGENTS.md to correct the configuration method for the Gateway API, ensuring clarity on usage from the `ai` package (v6).
- Included additional details about OpenRouter's configuration for better user guidance.

--- a/.gitignore
+++ b/.gitignore
@@ -218,6 +218,7 @@ frontend/*.debug.*
 frontend/debug-*
 frontend/temp-*
 frontend/*.temp.*
+frontend/frontend*.xml
 
 # Additional generated/temporary files
 **/consolidate_*.sh
