--- a/frontend/package.json
+++ b/frontend/package.json
@@ -121,6 +121,7 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
+    "babel-plugin-react-compiler": "^1.0.0",
     "jose": "^6.1.1",
     "jscodeshift": "^17.3.0",
     "jsdom": "^27.1.0",
