feat: enhance environment variable management and API integration
- Added new environment variables for OpenRouter and xAI API keys to support server-side fallbacks.
- Created comprehensive documentation for environment variable schema audit results, confirming 100% schema coverage and proper access patterns.
- Updated various components and hooks to utilize schema-validated environment variable access, improving type safety and maintainability.
- Refactored API client methods to streamline request handling and ensure consistent usage of environment variables across the codebase.

--- a/.env.test.example
+++ b/.env.test.example
@@ -93,6 +93,12 @@ OPENAI_MODEL=gpt-4o
 # Default temperature for AI models
 MODEL_TEMPERATURE=0.7
 
+# OpenRouter API key (server-side fallback, separate from attribution headers)
+OPENROUTER_API_KEY=sk-test-openrouter-key
+
+# xAI API key (server-side fallback)
+XAI_API_KEY=sk-test-xai-key
+
 # =============================================================================
 # LANGGRAPH ORCHESTRATION CONFIGURATION
 # =============================================================================
