--- a/frontend/package.json
+++ b/frontend/package.json
@@ -96,6 +96,7 @@
     "recharts": "^3.3.0",
     "rrule": "^2.8.1",
     "streamdown": "^1.4.0",
+    "stripe": "^19.3.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "uuid": "^13.0.0",
