docs(webhooks): document cache tags and qstash requirements

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -87,6 +87,24 @@ AI_GATEWAY_URL=https://ai-gateway.vercel.sh/v1
 OPENROUTER_REFERER=
 OPENROUTER_TITLE=TripSage
 
+# Email Service Configuration (Resend)
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=noreply@tripsage.com
+RESEND_FROM_NAME=TripSage
+
+# Durable Notifications Queue (Upstash QStash)
+# Token to publish jobs and verify signatures on worker routes.
+# Both signing keys are required in any environment where QStash jobs are accepted.
+QSTASH_TOKEN=
+QSTASH_CURRENT_SIGNING_KEY=
+QSTASH_NEXT_SIGNING_KEY=
+
+# Optional downstream collaborator webhook
+COLLAB_WEBHOOK_URL=
+
+# HMAC secret used to verify Supabase Database Webhooks in Vercel routes
+HMAC_SECRET=
+
 # =============================================================================
 # WEB CRAWLING & SEARCH
 # =============================================================================
@@ -103,6 +121,11 @@ FIRECRAWL_BASE_URL=https://api.firecrawl.dev/v2
 DUFFEL_ACCESS_TOKEN=
 DUFFEL_API_KEY=
 
+# Expedia Partner Solutions (EPS) Rapid API
+EPS_API_KEY=
+EPS_API_SECRET=
+EPS_BASE_URL=
+
 # OpenWeatherMap API key (for weather data)
 OPENWEATHERMAP_API_KEY=
 
@@ -117,6 +140,12 @@ ACCOM_SEARCH_TOKEN=
 # Airbnb MCP (Model Context Protocol) endpoint
 AIRBNB_MCP_URL=
 AIRBNB_MCP_API_KEY=
+
+# =============================================================================
+# PAYMENTS
+# =============================================================================
+# Stripe secret key (server-side payments)
+STRIPE_SECRET_KEY=
 
 # =============================================================================
 # BACKEND API CONFIGURATION
