feat(env): add APP_BASE_URL and stripe fallback

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -16,6 +16,9 @@ HOSTNAME=localhost
 # Server port (default: 3000 for frontend, 8000 for backend)
 PORT=3000
 
+# Canonical base URL for server-side redirects/emails
+APP_BASE_URL=http://localhost:3000
+
 # =============================================================================
 # FRONTEND (Next.js) - Public Variables (NEXT_PUBLIC_*)
 # =============================================================================
