refactor: enhance schema validation and introduce new utilities
- Updated various Zod schemas to utilize new top-level validators in Zod v4, improving validation consistency across the application.
- Introduced new utility functions for date handling and token management, enhancing overall functionality.
- Added comprehensive tests for new and updated schemas to ensure robust validation and error handling.
- Refactored existing code to leverage the new schemas and utilities, streamlining the codebase and improving maintainability.

These changes enhance the validation framework and utility functions, leading to a more reliable and maintainable codebase.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -223,6 +223,16 @@
       }
     },
     {
+      "includes": ["**/schemas/**/*.ts"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": "off"
+          }
+        }
+      }
+    },
+    {
       "includes": ["**/test/factories/**"],
       "linter": {
         "rules": {
