refactor: introduce Zod schema registry and enhance validation patterns
- Added a centralized Zod schema registry to streamline validation and type inference across the application.
- Created a comprehensive Zod Schema Guide for developers, detailing usage and best practices.
- Updated various schemas to utilize the new registry, improving consistency and maintainability.
- Enhanced error handling in validation schemas with unified error messages.
- Removed deprecated validation utilities and refactored related components for improved clarity and performance.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -23,6 +23,16 @@
   },
 
   "files": {
+    "experimentalScannerIgnores": [
+      "**/node_modules/**",
+      "**/.next/**",
+      "**/dist/**",
+      "**/build/**",
+      "**/coverage/**",
+      "**/.turbo/**",
+      "**/.vercel/**",
+      "**/storybook-static/**"
+    ],
     "ignoreUnknown": false,
     "includes": [
       "**/*.ts",
@@ -36,16 +46,6 @@
       "**/*.json",
       "**/*.css",
       "!**/out"
-    ],
-    "experimentalScannerIgnores": [
-      "**/node_modules/**",
-      "**/.next/**",
-      "**/dist/**",
-      "**/build/**",
-      "**/coverage/**",
-      "**/.turbo/**",
-      "**/.vercel/**",
-      "**/storybook-static/**"
     ],
     "maxSize": 1048576
   },
@@ -253,7 +253,12 @@
       }
     },
     {
-      "includes": ["**/schemas/env.ts", "**/env/schema.ts", "**/env/client.ts", "**/env/server.ts"],
+      "includes": [
+        "**/schemas/env.ts",
+        "**/env/schema.ts",
+        "**/env/client.ts",
+        "**/env/server.ts"
+      ],
       "linter": {
         "rules": {
           "style": {
@@ -387,7 +392,11 @@
       }
     },
     {
-      "includes": ["**/loading-states.tsx", "**/loading-spinner.tsx", "**/skeleton.tsx"],
+      "includes": [
+        "**/loading-states.tsx",
+        "**/loading-spinner.tsx",
+        "**/skeleton.tsx"
+      ],
       "linter": {
         "rules": {
           "a11y": {
