chore: update .gitignore and remove obsolete MCP integration plan
- Added a new entry to .gitignore to exclude MCP prompt files from version control.
- Deleted the outdated MCP integration and automation plan document to reduce clutter and maintain focus on current documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ worktrees/
 ARCHIVED_DOCS/
 docs/archive/
 repomix-output.*
+docs/prompts/mcp/**
 
 # Temporary documentation files
 *_SUMMARY.md
