refactor: enhance Vitest configuration and testing utilities
- Updated package.json to improve test coverage command with V8 provider and enabled coverage options.
- Refactored vitest.config.ts to implement a multi-project setup for unit, component, API, and integration tests, optimizing performance and organization.
- Introduced analyze-test-failures.js script to categorize and analyze test failures, aiding in debugging and improving test reliability.
- Enhanced test setup in test-setup.ts to provide essential mocks and polyfills, ensuring consistent testing environments.
- Created route-helpers.ts for generating mock NextRequest objects, facilitating easier testing of route handlers with proper context.
- Added fixture builders for deals in fixtures/deals.ts to ensure test data adheres to current schema requirements.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,17 @@
     "test:run": "vitest run",
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
     "test:benchmark": "npx tsx scripts/benchmark-tests.ts",
     "test:quick": "vitest run --reporter=dot",
-    "test:ci": "CI=1 VITEST_POOL=threads VITEST_MAX_WORKERS=2 vitest run --reporter=dot src/lib src/app src/components src/stores src/test",
-    "test:coverage:shard": "CI=1 vitest run --coverage --reporter=blob",
+    "test:ci": "vitest run --pool=forks --maxWorkers=2 --no-file-parallelism --reporter=dot",
+    "test:dev-fast": "vitest --pool=threads --maxWorkers=50% --reporter=default",
+    "test:unit": "vitest run --project=unit",
+    "test:components": "vitest run --project=component",
+    "test:api": "vitest run --project=api",
+    "test:integration": "vitest run --project=integration",
+    "test:changed": "vitest run --changed",
+    "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob",
     "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
     "boundary:check": "node ../scripts/check-boundaries.js",
