refactor: update authentication and search store structure
- Introduced new auth-core and auth-session slices to streamline authentication management, replacing the previous auth-store.
- Updated related hooks and components to utilize the new auth structure, enhancing consistency across the application.
- Refactored search store to improve organization and clarity, including renaming and restructuring related imports.
- Added shared helper functions for Zustand stores to reduce code duplication and improve maintainability.
- Updated tests to align with the new store structure and ensure comprehensive coverage.

--- a/.gitignore
+++ b/.gitignore
@@ -334,6 +334,9 @@ scan-results/
 supabase/.temp/
 docs/prompts/database-provider-research
 docs/prompts/tools/
+frontend/docs/prompts/tests/complete
+frontend/docs/prompts/review/dry/complete
+
 # Frontend workspace (consolidated from frontend/.gitignore)
 next-env.d.ts
 .vercel/
